# nini

./: .gitignore  CMakeLists.txt  Doxyfile  LICENCE  README.md  build-and-test.sh  gendoc.sh
include/: nini.h  nini_errmsg.h  nini_format.h  nini_helper.h  nini_node.h  nini_root.h  nini_type.h
lib/: CMakeLists.txt
src/: nini_errmsg.c  nini_helper.c  nini_node.c  nini_parser.c  nini_parser.h  nini_root.c
test/: CMakeLists.txt  formats.h  main.c  ninidump.c  ninidump.h  test_cpp.cpp  test_decode.c  test_decode.h  test_encode.c  test_encode.h  test_helper.c  test_helper.h  test_node.c  test_node.h
test/samples/: comments.dump  comments.ini  indents.dump  indents.ini  value-types.dump  value-types.ini
